deploy/api/manifests/httproute.tmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: __APP_NAME__-route
  namespace: __NAMESPACE__
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - "__API_HOSTNAME__"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: __APP_NAME__
          port: __SERVICE_PORT__
